# docs/swagger.json
@@ -11,7 +11,7 @@
     "paths": {
         "/api/v1/subscriptions": {
             "get": {
-                "description": "Get a list of all subscription records",
+                "description": "Get a list of all subscription records, optionally filtered",
                 "produces": [
                     "application/json"
                 ],
@@ -19,6 +19,20 @@
                     "subscriptions"
                 ],
                 "summary": "List all subscriptions",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Filter by user UUID",
+                        "name": "user_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Filter by service name",
+                        "name": "service_name",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
